--- a/config.yml
+++ b/config.yml
@@ -1,24 +1,21 @@
-welcome: "This bot will ask you some questions. Please answer them to the best of your ability."
+welcome: "Hello! With this bot, you can fill out the form, which will be posted to the channel, if admins accept it."
 templates:
-  - title: "Default Form"
-    description: "This is the default form."
-    complete: "Thank you for completing the form."
+  - title: "Form for posting to channel"
+    description: "This form will be posted to channel if accepted."
+    complete: "Thank you for completing the form, the bot will notify you when it will be accepted or rejected."
     entries:
     - mode: "text"
-      title: "Name"
-      correct: "It was a correct name"
-      incorrect: "It was an incorrect name"
-      description: "Enter your name"
+      title: "Event title"
+      incorrect: "You entered an incorrect title, please try again."
+      description: "Please, enter the title for your event."
     - mode: "date"
-      title: "Date of Birth"
-      correct: "It was a correct date of birth"
-      incorrect: "It was an incorrect date of birth"
-      description: "Enter your date of birth"
+      title: "Event Date"
+      incorrect: "It was an incorrect date, please try again."
+      description: "Please enter the date in DD.MM.YYYY format (e.g. 31.05.2024)."
     - mode: "oneof"
-      title: "Gender"
-      correct: "It was a correct answer"
-      incorrect: "It was an incorrect answer"
+      title: "Where will your event take place?"
+      incorrect: "Please, try again and use the buttons."
+      description: "Please select the answer from one of the buttons."
       options:
-        - "Male"
-        - "Female"
-        - "Other"
+        - "Outdoor"
+        - "Indoor"
