--- a/config.yml
+++ b/config.yml
@@ -1,21 +1,33 @@
-welcome: "Hello! With this bot, you can fill out the form, which will be posted to the channel, if admins accept it."
+welcome: "Hello! This bot can help you to fill out a form, which will be posted to a channel upon approval by channel administrators."
 templates:
-  - title: "Form for posting to channel"
-    description: "This form will be posted to channel if accepted."
-    complete: "Thank you for completing the form, the bot will notify you when it will be accepted or rejected."
+  - title: "Event announcement"
+    description: "This form is used to announce an event."
+    complete: "Thank you for completing the form, you will be notified when it is approved or rejected."
     entries:
     - mode: "text"
-      title: "Event title"
-      incorrect: "You entered an incorrect title, please try again."
-      description: "Please, enter the title for your event."
-    - mode: "date"
-      title: "Event Date"
-      incorrect: "It was an incorrect date, please try again."
-      description: "Please enter the date in DD.MM.YYYY format (e.g. 31.05.2024)."
+      title: "Event Name"
+      incorrect: "Please, enter a valid event name."
+      description: "Enter a short name for the event."
+    - mode: "text"
+      title: "Date of event"
+      incorrect: "Please, enter a valid date."
+      description: "Please, enter the date of the event in any format."
+    - mode: "text"
+      title: "Time of event"
+      incorrect: "Please, enter a valid time."
+      description: "Please, enter the time of the event in any format."
+    - mode: "text"
+      title: "Location"
+      incorrect: "Please, enter a valid location."
+      description: "Please, enter the location of the event."
+    - mode: "text"
+      title: "Description"
+      incorrect: "Please, enter a valid description."
+      description: "Please, enter a short description of the event."
     - mode: "oneof"
-      title: "Where will your event take place?"
-      incorrect: "Please, try again and use the buttons."
-      description: "Please select the answer from one of the buttons."
+      title: "Approval of the author"
+      incorrect: "Please, select a valid option."
+      description: "Do you need to ask the author for approval before visiting the event?"
       options:
-        - "Outdoor"
-        - "Indoor"
+        - "Yes"
+        - "No"
